# ror2_run_parser

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  requirements.txt  setup.cfg
.github/workflows/: unittest.yml
runparser/: __init__.py  __version__.py  autorunparser.py  player.py  runparser.py  runreport.py
runparser/db/: __init__.py  db.json  db.py
runparser/models/: __init__.py  artifact.py  equipment.py  item.py  player.py  profile.py  runreport.py  stat.py  survivor.py
runparser/utils/: __init__.py  enums.py
tests/: __init__.py  test_autorunparser.py  test_db.py  test_player.py  test_profile.py  test_runparser.py  test_runreport.py
tests/files/: player.xml  profile.xml  run2.xml  run3.xml
tests/files/runs/: run1.xml  run2.xml  run3.xml
