[metadata]
name = RoR2RunParser
version = 0.1.0
author = Andrew Augustine
author_email = me@azureagst.dev
description = A tool to help interact with Risk of Rain 2 save files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Azure-Agst/ror2_run_parser
project_urls =
    Bug Tracker = https://github.com/Azure-Agst/ror2_run_parser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7

[options.packages.find]
where = .